--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,13 @@
 }
 :root {
   font-family: "Roboto", sans-serif;
-  font-style: normal;
+  --dark-gray: #001233;
+  --primary-color: #2271d1;
+  --light-color: #6bd1ff;
+  --light-white: #f5f5f5;
+  --black: #000;
+  --white: #fff;
+  --backend-color: #00c86f;
+  --mobile-color: #ffba05;
 }
 
