--- a/src/components/Banner/Banner.module.css
+++ b/src/components/Banner/Banner.module.css
@@ -46,5 +46,11 @@
   border-radius: 4px;
   box-shadow: 0px 0px 17px 8px #6BD1FF inset;
   border: 2px solid #6BD1FF;
-
+}
+.info {
+  display: flex;
+  justify-content: space-between;
+  margin: 0 auto;
+  width: 100%;
+  max-width: 1400px;
 }
