--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,9 +1,13 @@
+.headerContainer {
+  width: 100%;
+  background-color: var(--dark-gray);
+}
+
 .header {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 35px 50px;
-  background-color: var(--dark-gray);
+  padding: 25px 0px;
   color: var(--white);
 }
 
@@ -19,7 +23,11 @@
   list-style: none;
   border: 2px solid white;
   border-radius: 12px;
-  padding: 5px 20px;
+  width: 180px;
+  height: 54px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   text-transform: uppercase;
 }
 .active{
@@ -31,5 +39,4 @@
  font-size: 16px;
  line-height: 24px;
  font-weight: 900;
-
 }
