--- a/src/components/Inputs/Input.module.css
+++ b/src/components/Inputs/Input.module.css
@@ -1,7 +1,9 @@
 .input {
   width: 100%;
-  height: 40px;
-  border: 1px solid #000;
+  height: 62px;
+  color: #fff;
+  background-color: transparent;
+  border: 1px solid #ccc;
   border-radius: 4px;
   padding: 0 10px;
   font-size: 16px;
