--- a/src/components/Inputs/Select.module.css
+++ b/src/components/Inputs/Select.module.css
@@ -1,7 +1,8 @@
 .select {
   width: 100%;
-  height: 40px;
-  border: 1px solid #000;
+  height: 62px;
+  background-color: transparent;
+  color: #fff;
   border-radius: 4px;
   padding: 0 10px;
   font-size: 16px;
