--- a/src/components/Inputs/TextArea.module.css
+++ b/src/components/Inputs/TextArea.module.css
@@ -1,8 +1,9 @@
 .textarea {
   width: 100%;
-  height: 80px;
-  border: 1px solid #000;
+  max-width: 573px;
+  height: 200px;
+  background-color: transparent;
   border-radius: 4px;
-  padding: 0 10px;
+  padding: 10px;
   font-size: 16px;
 }
