--- a/src/components/NewVideo/NewVideo.module.css
+++ b/src/components/NewVideo/NewVideo.module.css
@@ -9,9 +9,34 @@
   background: #191919;
   color: #fff;
 }
-.input {
-  background-color: red;
+.title {
+  text-align: center;
+  font-size: 60px;
+  font-weight: 800;
+  text-transform: uppercase;
+  margin-top: 70px;
+  margin-bottom: 10px;
+}
+.description {
+  text-align: center;
+  font-size: 20px;
+  text-transform: uppercase;
+  margin-bottom: 50px;
+}
+.subtitle {
+  font-size: 36px;
+  font-weight: 500;
+  margin-bottom: 40px;
+}
+.inputs {
+  width: 100%;
+  display: flex;
+  gap: 20px;
+  margin-bottom: 40px;
+}
+.inputArea {
+  flex: 1;
 }
 .form {
-  width: 575px;
+  width: 1172px;
 }
