--- a/src/components/NewVideo/NewVideo.module.css
+++ b/src/components/NewVideo/NewVideo.module.css
@@ -8,13 +8,13 @@
   margin: 0 auto;
   background: #191919;
   color: #fff;
+  padding: 70px 0px;
 }
 .title {
   text-align: center;
   font-size: 60px;
   font-weight: 800;
   text-transform: uppercase;
-  margin-top: 70px;
   margin-bottom: 10px;
 }
 .description {
