--- a/src/components/Buttons/ButtonTech.module.css
+++ b/src/components/Buttons/ButtonTech.module.css
@@ -1,18 +1,16 @@
 .buttonTech {
-  width: 432px;
-  height: 70px;
-  font-size: 32px;
-  font-weight: 800;
-  border: none;
-  border-radius: 15px;
-  text-align: center;
+  font-family: "Source Sans Pro", sans-serif;
+  font-size: 16px;
+  font-weight: 900;
+  color: var(--white);
+  background-color: transparent;
+  border: 1px solid white;
+  border-radius: 12px;
+  width: 100%;
+  max-width: 180px;
+  height: 54px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   text-transform: uppercase;
-  cursor: pointer;
-  color: var(--light-white);
-}
-@media(max-width: 768px) {
-  .buttonTech {
-    width: 286px;
-    font-size: 24px;
-  }
 }
