--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -14,7 +14,7 @@
 .header img {
   width: 168px;
 }
-.header nav ul{
+.header nav ul {
   display: flex;
   gap: 25px;
 }
@@ -30,13 +30,13 @@
   justify-content: center;
   text-transform: uppercase;
 }
-.active{
-  box-shadow: 0px 0px 12px 4px #2271D1 inset;
+.active {
+  box-shadow: 0px 0px 12px 4px #2271d1 inset;
 }
-.header nav ul li a{
- color: aliceblue;
- text-decoration: none;
- font-size: 16px;
- line-height: 24px;
- font-weight: 900;
+.header nav ul li a {
+  color: aliceblue;
+  text-decoration: none;
+  font-size: 16px;
+  line-height: 24px;
+  font-weight: 900;
 }
