--- a/src/components/Inputs/TextArea.module.css
+++ b/src/components/Inputs/TextArea.module.css
@@ -2,6 +2,7 @@
   width: 100%;
   max-width: 573px;
   height: 200px;
+  color: var(--white);
   background-color: transparent;
   border-radius: 4px;
   padding: 10px;
