--- a/src/components/Dialog/Style.css
+++ b/src/components/Dialog/Style.css
@@ -1,8 +1,3 @@
-/*@import "@radix-ui/colors/black-alpha.css";
-@import "@radix-ui/colors/green.css";
-@import "@radix-ui/colors/mauve.css";
-@import "@radix-ui/colors/violet.css";*/
-
 /* reset */
 button,
 fieldset,
@@ -11,25 +6,25 @@ input {
 }
 
 .DialogOverlay {
-  /*background-color: var(--black-a9);*/
+  background-color: #0000009f;
   position: fixed;
   inset: 0;
   animation: overlayShow 150ms cubic-bezier(0.16, 1, 0.3, 1);
 }
 
 .DialogContent {
-  background-color: var(--white);
+  color: var(--white);
+  background-color: #03122f;
   border-radius: 6px;
-  box-shadow: hsl(206 22% 7% / 35%) 0px 10px 38px -10px,
-    hsl(206 22% 7% / 20%) 0px 10px 20px -15px;
+  border: 2px solid #6bd1ff;
   position: fixed;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  height: 95vh;
   width: 90vw;
-  max-width: 450px;
-  max-height: 85vh;
-  padding: 25px;
+  max-width: 974px;
+  padding: 20px;
   animation: contentShow 150ms cubic-bezier(0.16, 1, 0.3, 1);
 }
 .DialogContent:focus {
@@ -37,50 +32,11 @@ input {
 }
 
 .DialogTitle {
-  margin: 0;
-  font-weight: 500;
-  color: var(--mauve-12);
-  font-size: 17px;
-}
-
-.DialogDescription {
-  margin: 10px 0 20px;
-  color: var(--mauve-11);
-  font-size: 15px;
-  line-height: 1.5;
-}
-
-.Button {
-  display: inline-flex;
-  align-items: center;
-  justify-content: center;
-  border-radius: 4px;
-  padding: 0 15px;
-  font-size: 15px;
-  line-height: 1;
-  font-weight: 500;
-  height: 35px;
-}
-.Button.violet {
-  background-color: var(--white);
-  color: var(--violet-11);
-  box-shadow: 0 2px 10px var(--black-a7);
-}
-.Button.violet:hover {
-  background-color: var(--mauve-3);
-}
-.Button.violet:focus {
-  box-shadow: 0 0 0 2px black;
-}
-.Button.green {
-  background-color: var(--green-4);
-  color: var(--green-11);
-}
-.Button.green:hover {
-  background-color: var(--green-5);
-}
-.Button.green:focus {
-  box-shadow: 0 0 0 2px var(--green-7);
+  font-size: 50px;
+  font-weight: 800;
+  color: var(--primary-color);
+  max-width: 573px;
+  margin: 0 auto 20px auto;
 }
 
 .IconButton {
@@ -97,42 +53,30 @@ input {
   right: 10px;
 }
 .IconButton:hover {
-  background-color: var(--violet-4);
-}
-.IconButton:focus {
-  box-shadow: 0 0 0 2px var(--violet-7);
+  background-color: var(--primary-color);
 }
 
 .Fieldset {
   display: flex;
+  flex-direction: column;
   gap: 20px;
   align-items: center;
   margin-bottom: 15px;
 }
-
-.Label {
-  font-size: 15px;
-  color: var(--violet-11);
-  width: 90px;
-  text-align: right;
-}
-
-.Input {
+.Field {
   width: 100%;
-  flex: 1;
-  display: inline-flex;
-  align-items: center;
-  justify-content: center;
-  border-radius: 4px;
-  padding: 0 10px;
-  font-size: 15px;
-  line-height: 1;
-  color: var(--violet-11);
-  box-shadow: 0 0 0 1px var(--violet-7);
-  height: 35px;
+  max-width: 573px;
 }
+
 .Input:focus {
   box-shadow: 0 0 0 2px var(--violet-8);
+}
+.Buttons {
+  display: flex;
+  justify-content: space-between;
+  gap: 20px;
+  width: 100%;
+  max-width: 573px;
 }
 
 @keyframes overlayShow {
